correction and adding

--- a/src/Ordering/Ordering.API/appsettings.json
+++ b/src/Ordering/Ordering.API/appsettings.json
@@ -6,5 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=OrderDb;Username=postgres;Password=0000"
+  },
+  "EventBus": {
+    "HostName": "localhost",
+    "Username": "guest",
+    "Password": "guest"
+  }
 }
