--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,9 @@ services:
             dockerfile: src/Basket/Basket.API/Dockerfile
     rabbitmq:
         image: rabbitmq:3-management-alpine 
+  ordering.api:
+    image: ${DOCKER_REGISTRY-}orderingapi
+    build:
+      context: .
+      dockerfile: src/Ordering/Ordering.API/Dockerfile
+
